# lightnovel-crawler

./: .appveyor.yml  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.sample  .flake8  .gitignore  .pypirc  .travis.yml  Aptfile  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.pip  README.rst  VERSION  __main__.py  app.json  binding.py  bot_requirements.txt  build.py  build_win.py  client_secrets.json  compose.yml  dev-requirements.txt  docker.sh  epub.py  helper.py  lnmtl.py  lnmtl_settings.py  mycreds.txt  package-lock.json  package.json  package.sh  prox.csv  (+23 more)
.github/: FUNDING.yml  contribs.json  dependabot.yml  lang_codes.json
.github/ISSUE_TEMPLATE/: 1_general.md  2_new-source.md  3_source-issue.md  4_bug_report.md  anything-else.md  bug_report.md  general.md  new-source.md  remove-source.md
.github/workflows/: deploy.yml  index-gen.yml  lint-pr.yml  lint.yml  on-pull-req.yml  on-push.yml  package.yml  pythonapp.yml  pythonpackage.yml  release.yml
.old/: lnmtl.py
Cultivation Chat Group/: meta.json
EbookCrawler/: binding.py  helper.py  lnmtl.py  readln.py  webnovel.py  wuxia.py  wuxia_v2.py
Release That Witch/: meta.json
ebook_crawler/: __init__.py  _sample.py  binding.py  boxnovel.py  helper.py  idqidian.py  lnindo.py  lnmtl.py  novelplanet.py  readln.py  validators.py  webnovel.py  wuxia.py  wuxiac.py
ebook_crawler/app/: __init__.py  additional_configs.py  bind_books.py  binding.py  chapter_range.py  crawler.py  crawler_app.py  download_chapters.py  login.py  novel_info.py  parser.py  program.py  validators.py
ebook_crawler/interface/: crawler.py  crawler_app.py
ebook_crawler/tests/: crawler_app_test.py
ebook_crawler/utils/: binding.py  crawler.py  helper.py
epub-data/: book.opf  toc.ncx
epub-data/OEBPS/: chapter-001-chapter-i.html  chapter-002-chapter-ii.html  chapter-003-chapter-iii.html  copyright.html  front-cover.html  jackson.css  pressbooks-promo.html  table-of-contents.html  title-page.html
etc/wuxiaworld.com/: help.md  wuxia.proto  wuxia.proto.json
lib/kindlegen/: EULA.txt  EULA_Chinese.txt  EULA_Dutch.txt  EULA_French.txt  EULA_German.txt  EULA_Italian.txt  EULA_Japanese.txt  EULA_Spanish.txt  KindleGen Legal Notices 2013-02-19 Linux.txt  manual.html
lightnovel_crawler/: .old_cli.py  __init__.py  _sample.py  boxnovel.py  idqidian.py  lnindo.py  lnmtl.py  novelplanet.py  novelspread.py  readln.py  romanticlb.py  webnonline.py  webnovel.py  wuxia.py  wuxiac.py  wuxiaco.py  wuxiacom.py  wuxiaonline.py
lightnovel_crawler/app/: __init__.py  additional_configs.py  arguments.py  bind_books.py  chapter_range.py  display.py  download_chapters.py  icons.py  novel_info.py  program.py  prompts.py
lightnovel_crawler/assets/: _build.py  html_style.css  html_style.py  version.py
lightnovel_crawler/binders/: __init__.py  docx.py  epub.py  html.py  html_style.css  mobi.py  pdf.py  text.py
lightnovel_crawler/core/: __init__.py  arguments.py  display.py  icons.py  novel_info.py  prompts.py
lightnovel_crawler/spiders/: __init__.py  _sample.py  fullnovellive.py  lnindo.py  lnmtl.py  novelall.py  novelplanet.py  novelspread.py  readln.py  romanticlb.py  webnonline.py  webnovel.py  wuxiaco.py  wuxiacom.py  wuxiaonline.py
lightnovel_crawler/tests/: crawler_app_test.py
lightnovel_crawler/utils/: binding.py  cfscrape.py  crawler.py  html_style.css  kindlegen_download.py  update_checker.py
lncrawl/: VERSION  __init__.py  __main__.py  constants.py  sources.py  version.py  win_term_fix.py
lncrawl-web/: .prettierrc  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
lncrawl-web/src/: App.tsx  config.ts  main.scss  main.tsx
lncrawl/app/: arguments.py  config.py
lncrawl/assets/: banner.py  chars.py  colors.py  colors.txt  html_script.js  html_script.py  html_style.css  html_style.py  icons.py  languages.py  platforms.py  user_agents.py  version.py
lncrawl/binders/: __init__.py  audio.py  calibre.py  docx.py  epub.py  html.py  json.py  mobi.py  pdf.py  text.py  web.py
lncrawl/bots/: __init__.py  _sample.py  console.py  discord.py  telegram.py  test.py
lncrawl/chromedriver/: __init__.py  cdp.py  chrome.py  dprocess.py  elements.py  options.py  patcher.py  scripts.py  utils.py
lncrawl/core/: __init__.py  app.py  arguments.py  browser.py  chrome.py  cleaner.py  crawler.py  display.py  download_chapters.py  download_images.py  downloader.py  exeptions.py  logconfig.py  metadata.py  novel_info.py  novel_search.py  prompts.py  proxy.py  scraper.py  soup.py  sources.py  taskman.py
lncrawl/etc/: wuxiacom.proto  wuxiacom_pb2.py
lncrawl/interfaces/: __init__.py  console.py  telegram.py
lncrawl/models/: MetaInfo.py  __init__.py  chapter.py  formats.py  meta.py  novel.py  search_result.py  session.py  volume.py
lncrawl/sources/: 1ksy.py  1stkissnovel.py  88tang.py  9kqw.py  __init__.py  _sample.py  _template.py  aixdzs.py  allnovel.py  amnesiactl.py  (+205 more)
scripts/: Dockerfile  bitanon.sh  build.bat  build.sh  check_sources.py  discord-compose.yml  entry_point.sh  index_gen.py  lint.bat  lint.sh  lncrawl.service  publish.bat  publish.sh  push_tag.bat  push_tag.sh  push_tag_force.bat  push_tag_force.sh  rebrandly.sh  server-compose.yml  server.sh  source_index.py  start.sh  stop.sh
sources/: 1ksy.py  1stkissnovel.py  9kqw.py  __init__.py  _index.json  _madara_template.py  _rejected.json  _template.py  arnovel.py  asadatrans.py  asianhobbyist.py  automtl.py  bestlightnovel.py  boxnovel.py  centinni.py  chrysanthemumgarden.py  clicknovel.py  dobelyuwai.py  fantasyworldonline.py  fictionpress.py  foxaholic.py  hostednovel.py  hui3r.py  ixdzs.py  jpmtl.py  kolnovelnewsite.py  latestnovel.py  lightnovelpub.py  lightnovelshub.py  listnovel.py  lunarletters.py  madara_crawler.py  mangatoon.py  morenovel.py  mtlednovels.py  mtlnovel.py  mtlreader.py  myoniyonitrans.py  neosekaitranslations.py  novelgo.py  (+37 more)
src/: VERSION  __init__.py  __main__.py
tests/: __init__.py  test_arguments.py  test_config.py  test_extract_contents.py  test_models.py  test_scraper.py
(+1081 files in other folders)
