[tool.poetry]
name = "lncrawl"
version = "3.0.0-alpha"
description = "Downloads lightnovels from various online sources and generates ebooks in many formats."
authors = ["Sudipto Chandra <dipu.sudipta@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
cloudscraper = "*"
beautifulsoup4 = "*"
html5lib = "*"
cchardet = "*"
python-slugify = "*"
ebooklib = "*"
pyyaml = "*"
lxml = "*"
js2py = "*"
atomicwrites = "*"

[tool.poetry.dev-dependencies]
"discord.py" = "*"
python-telegram-bot = "*"
pyinstaller = "*"
pytest = "*"
pytest-env = "*"
responses = "*"
flake8 = "*"
tox = "*"
autopep8 = "*"
polling = "*"
pytest-watch = "*"
pytest-timeout = "*"
pytest-forked = "*"
pytest-xdist = "*"
pytest-cov = "*"
coverage = "*"
coveralls = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
