[metadata]
name = lightnovel-crawler
url = https://github.com/dipu-bd/lightnovel-crawler
version = file: VERSION
license = Apache 2.0
license_file = LICENSE
description = Crawls light novels and make html, text, epub, mobi, pdf and docx
long_description = file: README.pip
long_description_content_type = text/x-rst
author = Sudipto Chandra
author_email = dipu.sudipta@gmail.com
platforms =
    Linux
    macOS
    Windows
keywords =
    lightnovel
    crawler
    lncrawl
    ebook
    kindle
    download
    novel
    pdf
    epub
    mobi
    docx
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop  
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics
    Topic :: Printing
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Code = https://github.com/dipu-bd/lightnovel-crawler
    Issue tracker = https://github.com/dipu-bd/lightnovel-crawler/issues
    Documentation = https://github.com/dipu-bd/lightnovel-crawler/blob/master/README.md
    Say Thanks! = https://saythanks.io/to/dipu-bd

[options]
packages = find:
python_requires = >= 3.5
include_package_data = True
install_requires =
    beautifulsoup4 == 4.6.3
    EbookLib == 0.17
    requests == 2.21.0
    PyInquirer == 1.0.3
    progress == 1.4
    Js2Py == 0.59
    colorama == 0.4.1
    python-docx == 0.8.10
    python-dotenv == 0.10.1
    python-slugify == 2.0.1
    WeasyPrint == 45

[options.package_data]
lncrawl =
    assets/html_style.css
    ../VERSION

[options.entry_points]
console_scripts =
    lncrawl = lncrawl:main
    lightnovel-crawler = lncrawl:main
