[metadata]
name = lightnovel-crawler
url = https://github.com/dipu-bd/lightnovel-crawler
license = Apache 2.0
license_file = LICENSE
description = Crawls light novels and make html, text, epub, mobi, pdf and docx
long_description = file: README.pip
long_description_content_type = text/markdown
author = Sudipto Chandra
author_email = dipu.sudipta@gmail.com
platforms =
    Linux
    macOS
    Windows
keywords =
    lightnovel
    crawler
    lncrawl
    download
    ebook
    novel
    pdf
    epub
    mobi
    kindle
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop  
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics
    Topic :: Printing
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Code = https://github.com/dipu-bd/lightnovel-crawler
    Issue tracker = https://github.com/dipu-bd/lightnovel-crawler/issues
    Documentation = https://github.com/dipu-bd/lightnovel-crawler/blob/master/README.md
    Say Thanks! = https://saythanks.io/to/dipu-bd

[options]
python_requires = >= 3.5
include_package_data = True
packages = lncrawl
package_dir =
    lncrawl = src

[options.entry_points]
console_scripts =
    lncrawl = lncrawl:main
    lightnovel-crawler = lncrawl:main
