# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = lightnovel-crawler
version = file: lncrawl/VERSION
author = Sudipto Chandra
author_email = dipu.sudipta@gmail.com
url = https://github.com/dipu-bd/lightnovel-crawler
description = An app to download novels from online sources and generate e-books.
long_description = file: README.pip
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = lightnovel, crawler, lncrawl, novel, pdf, epub, mobi, scraper
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Environment :: Console
project_urls =
    "Source Code" = https://github.com/dipu-bd/lightnovel-crawler
    "Issue Tracker" = https://github.com/dipu-bd/lightnovel-crawler/issues
    "Documentation" = https://github.com/dipu-bd/lightnovel-crawler/blob/master/README.md

[options]
zip_safe = False
python_requires = >= 3.6
include_package_data = True

[options.entry_points]
console_scripts =
    lncrawl = lncrawl:main
    lightnovel-crawler = lncrawl:main

[flake8]
select=E9,F63,F7,F82
max-line-length = 127
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, res/, venv/, venv-win/, venv-linux
# max-complexity=10
